# aws-exploration

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: aws.yaml  main.yaml
aws/: app-task-def.json  task-def.json
src/: main.rs
terraform/: main.tf  variables.tf
